sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:11: error: illegal start of statement
      else{
      ^AlgInsertionSort:15: error: ';' expected but 'else' found.
     else if(i-j==0){
     ^